Add template and backend route to get item by id
